RESOLVED FIXED211954
Fix for crash in accessibility/mac/replace-text-with-range-on-webarea-element.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=211954
Summary Fix for crash in accessibility/mac/replace-text-with-range-on-webarea-element...
Andres Gonzalez
Reported 2020-05-15 07:27:22 PDT
Fix for crash in accessibility/mac/replace-text-with-range-on-webarea-element.html in isolated tree mode.
Attachments
Patch (4.27 KB, patch)
2020-05-15 10:12 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-05-15 10:12:02 PDT
EWS
Comment 2 2020-05-15 11:12:50 PDT
Committed r261749: <https://trac.webkit.org/changeset/261749> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399490 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-15 11:13:18 PDT
Note You need to log in before you can comment on or make changes to this bug.