Fix for crash in accessibility/mac/replace-text-with-range-on-webarea-element.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=211954

Reviewed by Chris Fleizach.

Fixes crash in isolated tree mode in accessibility/mac/replace-text-with-range-on-webarea-element.html.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::postTextStateChangeNotification): Check for null object before dereferencing.
(WebCore::AXObjectCache::rootWebArea): Reverted to returning an AXObject since it is not needed to return AXCoreObject.
* accessibility/AXObjectCache.h:


Canonical link: https://commits.webkit.org/224842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261749 268f45cc-cd09-0410-ab3c-d52691b4dbfc